--- a/marknow/templates/layout.html.j2
+++ b/marknow/templates/layout.html.j2
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{request.path}}</title>
+  <title>{{request.path.split('/')[-1]}}</title>
   <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
 </head>
 <body><div class="content">
