--- a/marknow/static/styles/night.css
+++ b/marknow/static/styles/night.css
@@ -10,6 +10,14 @@ div.content {
   padding: 10px;
 }
 
+h1 {
+  color: #70cfff;
+}
+
+h2, h3 {
+  color: #9cdeff;
+}
+
 table, th, tr, td {
   border: 1px #aaa solid;
   border-spacing: 0;
@@ -55,4 +63,17 @@ a:hover {
 
 a:active {
   color: #a3e0ff;
+}
+
+pre {
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #000;
+  color: #ccc;
+  font-size: larger;
+  font-family: 'Droid Sans Mono'
 }
