Add auto-refresh support

--- a/marknow/templates/layout.html.j2
+++ b/marknow/templates/layout.html.j2
@@ -6,6 +6,9 @@
 <html>
 <head>
   <title>{{request.path.split('/')[-1]}}</title>
+{% if refresh_seconds != None %}
+  <meta http-equiv="refresh" content="{{refresh_seconds}}" />
+{% endif %}
   <link rel="stylesheet" href="{{ url_for('static',filename=get_stylesheet()) }}">
 </head>
 <body><div class="content">
